compiler/testData/cli/jvm/kotlinHomeWithoutStdlib.out
warning: unable to find kotlin-stdlib.jar in the Kotlin home directory. Pass either '-no-stdlib' to prevent adding it to the classpath, or the correct '-kotlin-home'
warning: unable to find kotlin-script-runtime.jar in the Kotlin home directory. Pass either '-no-stdlib' to prevent adding it to the classpath, or the correct '-kotlin-home'
warning: unable to find kotlin-reflect.jar in the Kotlin home directory. Pass either '-no-reflect' or '-no-stdlib' to prevent adding it to the classpath, or the correct '-kotlin-home'
compiler/testData/cli/jvm/simple.kt:1:16: error: unresolved reference: Array
fun main(args: Array<String>) = println("hello world")
               ^
compiler/testData/cli/jvm/simple.kt:1:33: error: unresolved reference: println
fun main(args: Array<String>) = println("hello world")
                                ^
COMPILATION_ERROR
